--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "mantis-free-react-admin-template",
   "version": "1.1.2",
   "private": true,
-  "homepage": "https://mantisdashboard.io/free",
+  "homepage": "",
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.7.0",
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/joy": "^5.0.0-beta.2",
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
@@ -20,6 +22,7 @@
     "framer-motion": "^7.3.6",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
